Add DSB to homepage blogroll

--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ listing:
   - id: blogs
     contents: 
     - /news-and-views/editors-blog
-    # - datasciencebites
+    - /news-and-views/datasciencebites
     - "!index.qmd"
     sort: "date desc"
     type: default
