--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ listing:
 Welcome to the home of **Real World Data Science**, a new project from the [Royal Statistical Society](https://rss.org.uk/). This site and its content are being created and curated by data science practitioners and leaders with a single goal in mind: to help you deliver high quality, ethical, impactful data science in your workplace.
 
 ::: {.callout-note appearance="simple" collapse="false"}
-## Latest upates 
+## Latest updates 
 
 ::: {#blogs}
 ::: 
