Added description and image for listing

--- a/news-and-views/datasciencebites/posts/2022-09-12-ridesharing/ridesharing.qmd
+++ b/news-and-views/datasciencebites/posts/2022-09-12-ridesharing/ridesharing.qmd
@@ -1,15 +1,15 @@
 ---
 title: "Determining the best way to route drivers for ridesharing via reinforcement learning"
-# description: |
-#   A statistical toolbox in some ways is like an endless buffet. But researchers inevitably must face this daunting question: what method do you choose and why? Annie Xie summarises a new paper that seeks to address this issue.
+description: |
+  A/B testing is often used to evaluate the impact of design 'treatments' — for example, are people who see advert A more likely to buy something than those who see advert B? Classical methods typically assume that changing one person’s treatment will not affect others, but what if that's not the case? A paper by Shi et al. aims to address this problem.  
 categories:
   - A/B testing
   - Reinforcement learning
   - Statistics
 author: Brian King
 date: 12/09/2022
-# image: images/jeremy-perkins-UgNjyPkphtU-unsplash.jpg
-# image-alt: An orange ring on black background. Photo by Jeremy Perkins on Unsplash.
+image: images/paul-hanaoka-D-qq7W751vs-unsplash.jpg
+image-alt: Photo taken from the backseat of a Lyft vehicle. Driver is seen in profile to the left of the picture. Phone is mounted on the dash and displays a maps app that is tracking the route to the passenger's destination. Photo by Paul Hanaoka on Unsplash.
 toc: true
 ---
 :::{.callout-note collapse="false"}
@@ -51,4 +51,4 @@ Overall, the framework introduced allows for handling of carryover effects, is c
 **Brian King** is a PhD candidate in the Department of Statistics at Rice University and a current NSF Graduate Research Fellow, with research focused on Bayesian modeling and forecasting for time series of counts. Prior to Rice, he graduated from Baylor University with a B.S. in Mathematics and Statistics alongside a secondary major in Spanish and a minor in Computer Science.
 
 ## About DataScienceBites
-[**DataScienceBites**](/news-and-views/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. DataScienceBites is published by Real World Data Science, and is part of the [Science Bites](https://sciencebites.org/) [network of sites](https://sciencebites.org/sciencebites-sites-galaxy/). Find out how to [become a contributor](/contributor-docs/call-for-contributions.qmd)
+[**DataScienceBites**](/news-and-views/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. DataScienceBites is published by Real World Data Science, and is part of the [Science Bites](https://sciencebites.org/) [network of sites](https://sciencebites.org/sciencebites-sites-galaxy/). Find out how to [become a contributor](/contributor-docs/call-for-contributions.qmd).
