--- a/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd
+++ b/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Why large language models should come with a content warning"
 description: |
-  The outputs of LLMs seem impressive, but users need to be wary of possible bias, plagiarism and model ‘hallucinations’
+  The outputs of LLMs seem impressive, but users need to be wary of possible bias, plagiarism and model ‘hallucinations’.
 categories:
   - Machine learning
   - Large language models
