--- a/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd
+++ b/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd
@@ -11,7 +11,6 @@ date: 11/23/2022
 toc: true
 image: images/TeresaBerndtsson-LetterWord-Text-Taxonomy-1000x1333.jpg
 image-alt: A black keyboard at the bottom of the picture has an open book on it, with red words in labels floating on top, with a letter A balanced on top of them. The perspective makes the composition form a kind of triangle from the keyboard to the capital A. The AI filter makes it look like a messy, with a kind of cartoon style.
-license: CC BY-SA
 ---
 Anyone who has ever been set a writing task will probably have wished at some point that somebody else could write it for them. As a journalist of 20-plus years, the thought has certainly crossed my mind more than a few times. Which probably explains why a recent headline in Nature caught my attention: [“Could AI help you to write your next paper?”](https://www.nature.com/articles/d41586-022-03479-w) 
 
@@ -59,3 +58,13 @@ But, still, is this a technology that you have an eye on in your professional ca
 : **DN:** Absolutely, but we are mainly interested in smaller, more energy efficient, more computationally efficient models that are built on curated language, that can actually hold a conversation, and where you can represent concepts and topics and context explicitly. At the moment, LLMs can only pick up on context by accident – if it is sufficiently expressed in the language that they process – but they might lose track of it if things go on for too long. Essentially, they have a short-term memory: if you prompt them with some text, and they generate text, this stays in their short term memory. But if you prompt them with a long, convoluted sentence, they might not have the capacity to remember what was said at the beginning of the sentence, and so then they lose track of the context. And this is because they don't explicitly represent context and concepts.  
 
 The other thing is, if you use these systems for dialogues, then you have to script the dialogue. They don't sustain a dialogue by themselves. You create a dialogue tree, and what they do is they parse the text that comes from the user and then generate a response to it. And the response is then guided by the dialogue tree. But this is quite brittle; it can break. If you run out of dialogue tree, you need to pass the conversation over to a person. Systems like Siri and Alexa are like that, right? They break very quickly. So, you want these systems to be able to sustain conversations based on the correct context.
+
+:::{.callout-tip}
+### Have you got news for us?
+Is there a recent data science story you'd like our team to discuss? Do you have your own thoughts to share on a hot topic, or a burning question to put to the community? If so, either comment below or [contact us](/contact.qmd).
+:::
+
+###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
+
+---
+<p xmlns:cc="http://creativecommons.org/ns#" >This work is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
