fixed image descriptions and links

--- a/news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.qmd
+++ b/news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.qmd
@@ -10,7 +10,7 @@ author: Brian Tarran
 date: 12/09/2022
 toc: true
 image: images/jigsaw-words.jpg
-image-alt: An image created by the Stable Diffusion 2.1 Demo. The model was asked to produce an image with the prompt, "Text from an old book cut up like a jigsaw puzzle with pieces missing".
+image-alt: An image created by the Stable Diffusion 2.1 Demo. The model was asked to produce an image with the prompt, 'Text from an old book cut up like a jigsaw puzzle with pieces missing'.
 ---
 Two weeks ago, I posted a [Q&A with our editorial board member Detlef Nauck about large language models](/news-and-views/editors-blog/posts/2022-11-23-LLMs-content-warning/LLM-content-warning.qmd) (LLMs), their drawbacks and risks. And since then we’ve had several big new announcements in this space. First came news from Meta (the company that owns Facebook) about [Galactica, an LLM trained on scientific papers](https://galactica.org/mission/). This was followed by another Meta announcement, about [Cicero](https://ai.facebook.com/research/cicero/), an AI agent that is apparently very good at playing the game Diplomacy. And then came perhaps the biggest launch of them all: [ChatGPT from OpenAI](https://openai.com/blog/chatgpt/), an LLM-based chatbot that millions of people have already started talking to. 
 
@@ -32,10 +32,10 @@ When situations like these occur, I’m always reminded of Dr. Ian Malcolm’s l
 
 Also, I think open sourcing these models provides a way forward. A lot of large language models are open for use and for research, but aren't themselves open sourced, so it's very difficult to get underneath the surface and figure out exactly how they work. But with open source, you have opportunities for researchers, whether they're technical or in the field of ethics, to go and investigate and find out exactly what's going on. I think that would be a fantastic step forward. It doesn't take you all the way, of course, because a large amount of the data that these systems use is never open-sourced, so while you might get an understanding of the mechanics, you have no idea of what exactly went into them in the first place. But open sourcing is a very good way of getting some external scrutiny. It’s about being transparent, which is a core principle of AI ethics and responsible AI.  
 
-![](images/jigsaw-words.jpg){fig-alt="An image created by the [Stable Diffusion 2.1 Demo](https://huggingface.co/spaces/stabilityai/stable-diffusion). The model was asked to produce an image with the prompt, 'Text from an old book cut up like a jigsaw puzzle with pieces missing'." width="500" fig-align="center"}
+![](images/jigsaw-words.jpg){fig-alt="An image created by the Stable Diffusion 2.1 Demo. The model was asked to produce an image with the prompt, 'Text from an old book cut up like a jigsaw puzzle with pieces missing'." width="500" fig-align="center"}
 
 ::: {.column-margin}
-An image created by the Stable Diffusion 2.1 Demo. The model was asked to produce an image with the prompt, "Text from an old book cut up like a jigsaw puzzle with pieces missing".
+An image created by the [Stable Diffusion 2.1 Demo](https://huggingface.co/spaces/stabilityai/stable-diffusion). The model was asked to produce an image with the prompt, "Text from an old book cut up like a jigsaw puzzle with pieces missing".
 :::
 
 Thinking about LLMs and their questionable outputs, should there not be ways for users to help the models produce better, more accurate outputs? 
