--- a/news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.qmd
+++ b/news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.qmd
@@ -19,16 +19,19 @@ Following these stories and the surrounding commentaries has been something of a
 To help me make sense of all these new developments, and the myriad implications, I reached out to [Harvey Lewis](/news-and-views/editors-blog/posts/2022-10-18-meet-the-team/meet-the-team.qmd), another of our editorial board members and a partner in EY’s tax and law practice. 
 
 ## Q&A 
-Harvey, when I spoke with Detlef, he mentioned that one of the reasons we're seeing investment in LLMs is because there's this belief that they are somehow the route to artificial general intelligence (AGI). And there were headlines in some places that would perhaps convince a casual reader that AGI had been achieved following the release of ChatGPT. For example, the Telegraph described it as a [“scarily intelligent robot who can do your job better than you”](https://www.telegraph.co.uk/business/2022/12/05/meet-scarily-intelligent-robot-who-can-do-job-better/). What do you make of all that? 
-: **Harvey Lewis (HL):** My personal view is that you won't get to artificial general intelligence using just one technique like deep learning, because of the problematic nature of these models and the limitations of the data used in their training. I'm convinced that more general intelligence will come from a combination of different systems.  
+**Harvey, when I spoke with Detlef, he mentioned that one of the reasons we're seeing investment in LLMs is because there's this belief that they are somehow the route to artificial general intelligence (AGI). And there were headlines in some places that would perhaps convince a casual reader that AGI had been achieved following the release of ChatGPT. For example, the Telegraph described it as a [“scarily intelligent robot who can do your job better than you”](https://www.telegraph.co.uk/business/2022/12/05/meet-scarily-intelligent-robot-who-can-do-job-better/). What do you make of all that?** 
+
+**Harvey Lewis (HL):** My personal view is that you won't get to artificial general intelligence using just one technique like deep learning, because of the problematic nature of these models and the limitations of the data used in their training. I'm convinced that more general intelligence will come from a combination of different systems.  
 
 The challenge with many LLMs, as we’ve seen repeatedly, is that they've no real understanding of language or concepts represented within language. They’re good at finding patterns in semantics and grammatical rules that people use in writing, and then they use those patterns to create new expressions given a prompt. But they've no idea whether these outputs are factual, inaccurate or completely fabricated. As a consequence, they can produce outputs that are unreliable, but which sound authoritative, because they're just repeating a style that we expect to see.  
 
-Over the past couple of weeks, Twitter has been full of people either showing off astoundingly impressive outputs from LLMs, or examples of truly worrying nonsense. One example of the latter is when ChatGPT was asked to [“describe how crushed porcelain added to breast milk can support the infant digestive system”](https://twitter.com/GaryMarcus/status/1599584310633594881). This made me think of a recent headline from [VentureBeat](https://venturebeat.com/ai/is-ai-moving-too-fast-for-ethics-the-ai-beat/), which asked whether AI is moving too fast for ethics to catch up. Do you think that it is? 
-: **HL:** I find that to be an interesting philosophical question, because ethics does move very slowly, for good reason. When you think of issues of bias and discrimination and prejudice, or misinformation and other problems that we might have with AI systems, it shouldn’t be a surprise that these can occur. We're aware of them. We're aware of the ethical issues. So, why do they always seem to catch us by surprise? Is it because we have teams of people who simply aren't aware of ethical issues or don't have any appreciation of them? This points – for me, at least – in the direction of needing to have philosophers, ethicists, theologians, lawyers working *in* the technical teams that are developing and working on these systems, rather than having them on the periphery and talking about these issues but not directly involved themselves. I think it's hugely important to ensure that you've got trust, responsibility, and ethics embedded in technical teams, because that's the only way it seems that you can avoid some of these “surprises”.  
+**Over the past couple of weeks, Twitter has been full of people either showing off astoundingly impressive outputs from LLMs, or examples of truly worrying nonsense. One example of the latter is when ChatGPT was asked to [“describe how crushed porcelain added to breast milk can support the infant digestive system”](https://twitter.com/GaryMarcus/status/1599584310633594881). This made me think of a recent headline from [VentureBeat](https://venturebeat.com/ai/is-ai-moving-too-fast-for-ethics-the-ai-beat/), which asked whether AI is moving too fast for ethics to catch up. Do you think that it is?**
 
-When situations like these occur, I’m always reminded of Dr. Ian Malcolm’s line from Jurassic Park: “…your scientists were so preoccupied with whether or not they could that they didn't stop to think if they should.” The mindset seems to be, let's push the boundaries and see what we can do, rather than stop and think deeply about what the implications might be. 
-: **HL:** There's a balance to be struck between these things, though, right? Firstly, show consideration for some of the issues at the outset, and secondly, have checks and balances and safeguards built into the process by which you design, develop and implement these systems. That's the only way to create the proper safeguards around the systems. I don't think that there's any lack of appreciation of what needs to be done; people have been talking about this now for quite a long time. But it’s about making sure organisationally that it is done, and that you've got an operating model which bakes these things into it; that the kinds of principles and governance that you want to have around these systems are written, publicised, and properly policed. There should be no fear of making advances in that kind of a context.  
+**HL:** I find that to be an interesting philosophical question, because ethics does move very slowly, for good reason. When you think of issues of bias and discrimination and prejudice, or misinformation and other problems that we might have with AI systems, it shouldn’t be a surprise that these can occur. We're aware of them. We're aware of the ethical issues. So, why do they always seem to catch us by surprise? Is it because we have teams of people who simply aren't aware of ethical issues or don't have any appreciation of them? This points – for me, at least – in the direction of needing to have philosophers, ethicists, theologians, lawyers working *in* the technical teams that are developing and working on these systems, rather than having them on the periphery and talking about these issues but not directly involved themselves. I think it's hugely important to ensure that you've got trust, responsibility, and ethics embedded in technical teams, because that's the only way it seems that you can avoid some of these “surprises”.  
+
+**When situations like these occur, I’m always reminded of Dr. Ian Malcolm’s line from Jurassic Park: “…your scientists were so preoccupied with whether or not they could that they didn't stop to think if they should.” The mindset seems to be, let's push the boundaries and see what we can do, rather than stop and think deeply about what the implications might be.** 
+
+**HL:** There's a balance to be struck between these things, though, right? Firstly, show consideration for some of the issues at the outset, and secondly, have checks and balances and safeguards built into the process by which you design, develop and implement these systems. That's the only way to create the proper safeguards around the systems. I don't think that there's any lack of appreciation of what needs to be done; people have been talking about this now for quite a long time. But it’s about making sure organisationally that it is done, and that you've got an operating model which bakes these things into it; that the kinds of principles and governance that you want to have around these systems are written, publicised, and properly policed. There should be no fear of making advances in that kind of a context.  
 
 Also, I think open sourcing these models provides a way forward. A lot of large language models are open for use and for research, but aren't themselves open sourced, so it's very difficult to get underneath the surface and figure out exactly how they work. But with open source, you have opportunities for researchers, whether they're technical or in the field of ethics, to go and investigate and find out exactly what's going on. I think that would be a fantastic step forward. It doesn't take you all the way, of course, because a large amount of the data that these systems use is never open sourced, so while you might get an understanding of the mechanics, you have no idea of what exactly went into them in the first place. But open sourcing is a very good way of getting some external scrutiny. It’s about being transparent, which is a core principle of AI ethics and responsible AI.  
 
@@ -38,11 +41,13 @@ Also, I think open sourcing these models provides a way forward. A lot of large 
 An image created by the [Stable Diffusion 2.1 Demo](https://huggingface.co/spaces/stabilityai/stable-diffusion). The model was asked to produce an image with the prompt, "Text from an old book cut up like a jigsaw puzzle with pieces missing".
 :::
 
-Thinking about LLMs and their questionable outputs, should there not be ways for users to help the models produce better, more accurate outputs?
-: **HL:** There are, but there are also problems here too. I've been having an interesting dialogue with ChatGPT this morning, asking it about quantum computing.[^1] For each response to a prompt, users are encouraged to provide feedback on whether or not an output is good. But you’re only provided with the usual thumbs-up/thumbs-down ratings; there's nothing nuanced about it. So, for example, I asked ChatGPT to provide me with good analogies that help to explain quantum computing in simple terms. The first analogy was a combination lock, which is not a good analogy. The chatbot suggested that quantum computing is like a combination lock in which you can test all of the combinations at the same time, but I don't know any combination locks where you can do this – being able to check only one combination at a time is the principal security mechanism of a combination lock! I asked it again for another analogy, and it suggested a coin toss where, when the coin is spinning in the air, you can see both heads and tails simultaneously but it isn't until you catch the coin and then show its face that one of the states of the coin is resolved. That is a good analogy – it’s one I’ve also used myself. Now, the challenge I can see with a lot of these feedback approaches is that unless I know enough about quantum computing to understand that a combination lock is not a good analogy whereas a coin toss is, how am I to provide that kind of feedback? They’re relying to an extent on the user being able to make a distinction between what is correct and what is potentially incorrect or flawed, and I think that's not a good way of approaching the problem.
+**Thinking about LLMs and their questionable outputs, should there not be ways for users to help the models produce better, more accurate outputs?**
 
-Final question for you, Harvey. There's a lot of excitement around GPT-4, which is apparently coming soon. The rumour mill says it will bring [a leap forward in performance](https://thealgorithmicbridge.substack.com/p/gpt-4-rumors-from-silicon-valley). But what do you expect we’ll see – particularly with regards to the issues we’ve talked about today? 
-: **HL:** I’ve likened some of the large language models and their approach of “bigger is better” to the story of the Tower of Babel – trying to reach heaven by building a bigger and bigger tower, basically. That is not going to achieve the objective of artificial general intelligence, no matter how sophisticated an LLM might appear. That said, language is an fascinating area. I'm not a linguist, but I spend a lot of my time on natural language processing using AI systems. Language responds very well to AI because it is pattern-based. We speak using patterns, we write using patterns, and these can be inferred by machines from many examples. The addition of more parameters in the models allows them to understand patterns that extend further into the text, and I suspect that outputs from these kinds of models are going to be largely indistinguishable from the sorts of things that you or I might write.  
+**HL:** There are, but there are also problems here too. I've been having an interesting dialogue with ChatGPT this morning, asking it about quantum computing.[^1] For each response to a prompt, users are encouraged to provide feedback on whether or not an output is good. But you’re only provided with the usual thumbs-up/thumbs-down ratings; there's nothing nuanced about it. So, for example, I asked ChatGPT to provide me with good analogies that help to explain quantum computing in simple terms. The first analogy was a combination lock, which is not a good analogy. The chatbot suggested that quantum computing is like a combination lock in which you can test all of the combinations at the same time, but I don't know any combination locks where you can do this – being able to check only one combination at a time is the principal security mechanism of a combination lock! I asked it again for another analogy, and it suggested a coin toss where, when the coin is spinning in the air, you can see both heads and tails simultaneously but it isn't until you catch the coin and then show its face that one of the states of the coin is resolved. That is a good analogy – it’s one I’ve also used myself. Now, the challenge I can see with a lot of these feedback approaches is that unless I know enough about quantum computing to understand that a combination lock is not a good analogy whereas a coin toss is, how am I to provide that kind of feedback? They’re relying to an extent on the user being able to make a distinction between what is correct and what is potentially incorrect or flawed, and I think that's not a good way of approaching the problem.
+
+**Final question for you, Harvey. There's a lot of excitement around GPT-4, which is apparently coming soon. The rumour mill says it will bring [a leap forward in performance](https://thealgorithmicbridge.substack.com/p/gpt-4-rumors-from-silicon-valley). But what do you expect we’ll see – particularly with regards to the issues we’ve talked about today?** 
+
+**HL:** I’ve likened some of the large language models and their approach of “bigger is better” to the story of the Tower of Babel – trying to reach heaven by building a bigger and bigger tower, basically. That is not going to achieve the objective of artificial general intelligence, no matter how sophisticated an LLM might appear. That said, language is an fascinating area. I'm not a linguist, but I spend a lot of my time on natural language processing using AI systems. Language responds very well to AI because it is pattern-based. We speak using patterns, we write using patterns, and these can be inferred by machines from many examples. The addition of more parameters in the models allows them to understand patterns that extend further into the text, and I suspect that outputs from these kinds of models are going to be largely indistinguishable from the sorts of things that you or I might write.  
 
 But, I also think that increasing the number of parameters runs a real risk – and we're starting to see this in other generative models – where prompts become so specific that the models aren't actually picking up on patterns, they are picking up on specific instances of training data and text they've seen before. So, buried amongst these fantastically written articles on all kinds of subjects are going to be more examples of plagiarism, which is a problem; more examples of spelling mistakes and other kinds of issues, because these are also patterns which are going to possibly be observed.  
 
