--- a/news-and-views/editors-blog/posts/2022-12-01-themes/2022-12-01-themes.qmd
+++ b/news-and-views/editors-blog/posts/2022-12-01-themes/2022-12-01-themes.qmd
@@ -11,6 +11,8 @@ date: 12/01/2022
 toc: true
 image: images/kelly-sikkema-vSNy_bWa5AE-unsplash-crop.jpg
 image-alt: A photo of a black stencilled number 4 on a white brick wall. Photo by Kelly Sikkema on Unsplash.
+aliases: 
+  - /news-and-views/editors-blog/posts/2022-12-01-themes/2022-12-01-themes.qmd
 ---
 We’ve had a fantastic early response to our [call for contributions](/contributor-docs/call-for-contributions.qmd), and it has been pleasing to see and hear how our plans for Real World Data Science chime with the wants and needs of the data science community. But one question we’ve been asked frequently is: “What particular topics are you most interested in?” 
 
