--- a/news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.qmd
+++ b/news-and-views/editors-blog/posts/2022-12-09-LLM-news/LLM-news.qmd
@@ -47,7 +47,7 @@ An image created by the [Stable Diffusion 2.1 Demo](https://huggingface.co/space
 
 **Final question for you, Harvey. There's a lot of excitement around GPT-4, which is apparently coming soon. The rumour mill says it will bring [a leap forward in performance](https://thealgorithmicbridge.substack.com/p/gpt-4-rumors-from-silicon-valley). But what do you expect we’ll see – particularly with regards to the issues we’ve talked about today?** 
 
-**HL:** I’ve likened some of the large language models and their approach of “bigger is better” to the story of the Tower of Babel – trying to reach heaven by building a bigger and bigger tower, basically. That is not going to achieve the objective of artificial general intelligence, no matter how sophisticated an LLM might appear. That said, language is an fascinating area. I'm not a linguist, but I spend a lot of my time on natural language processing using AI systems. Language responds very well to AI because it is pattern-based. We speak using patterns, we write using patterns, and these can be inferred by machines from many examples. The addition of more parameters in the models allows them to understand patterns that extend further into the text, and I suspect that outputs from these kinds of models are going to be largely indistinguishable from the sorts of things that you or I might write.  
+**HL:** I’ve likened some of the large language models and their approach of “bigger is better” to the story of the Tower of Babel – trying to reach heaven by building a bigger and bigger tower, basically. That is not going to achieve the objective of artificial general intelligence, no matter how sophisticated an LLM might appear. That said, language is a fascinating area. I'm not a linguist, but I spend a lot of my time on natural language processing using AI systems. Language responds very well to AI because it is pattern-based. We speak using patterns, we write using patterns, and these can be inferred by machines from many examples. The addition of more parameters in the models allows them to understand patterns that extend further into the text, and I suspect that outputs from these kinds of models are going to be largely indistinguishable from the sorts of things that you or I might write.  
 
 But, I also think that increasing the number of parameters runs a real risk – and we're starting to see this in other generative models – where prompts become so specific that the models aren't actually picking up on patterns, they are picking up on specific instances of training data and text they've seen before. So, buried amongst these fantastically written articles on all kinds of subjects are going to be more examples of plagiarism, which is a problem; more examples of spelling mistakes and other kinds of issues, because these are also patterns which are going to possibly be observed.  
 
