--- a/contributor-docs/datasciencebites.qmd
+++ b/contributor-docs/datasciencebites.qmd
@@ -50,9 +50,11 @@ If you are interested in contributing to [DataScienceBites](/news-and-views/data
 :::{.callout-important}
 ## Two things to keep in mind
 
-DataScienceBites contributors are not permitted to write about their own research papers. If contributors are in any way affiliated with the authors of papers they write about, this must be disclosed as part of their submission. 
+DataScienceBites contributors are not permitted to write about their own research papers. 
+
+If contributors are in any way affiliated with the authors of papers they write about, this must be disclosed as part of their submission. 
 ::: 
 
 ## About the ScienceBites family 
 
-DataScienceBites is published by Real World Data Science and is part of the [Science Bites](https://sciencebites.org/) [galaxy of sites](https://sciencebites.org/sciencebites-sites-galaxy/). See [sciencebites.org](https://sciencebites.org/about/) for an overview of the ScienceBites mission.
+DataScienceBites is published by Real World Data Science and is part of the [ScienceBites](https://sciencebites.org/) [galaxy of sites](https://sciencebites.org/sciencebites-sites-galaxy/). See [sciencebites.org](https://sciencebites.org/about/) for an overview of the ScienceBites mission.
