--- a/contributor-docs/call-for-contributions.qmd
+++ b/contributor-docs/call-for-contributions.qmd
@@ -15,6 +15,7 @@ Below is a list of our core content areas. We welcome submissions in any of thes
 * [Datasets](datasets.qmd)
 * [Training guides](training-guides.qmd)
 * [Recommenders](recommender.qmd)
+* **New!** [DataScienceBites](datasciencebites.qmd)
 
 Submissions can focus on any and all topics and application areas. We want our content to reflect the breadth and depth of real-world data science. 
 
