--- a/news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.qmd
+++ b/news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.qmd
@@ -20,7 +20,7 @@ For [DataScienceBites](/news-and-views/datasciencebites/index.qmd), our focus wi
 
 This launch post is written by Brian King and is republished with permission from [MathStatBites](https://mathstatbites.org/determining-the-best-way-to-route-drivers-for-ridesharing-via-reinforcement-learning/), so I want to say a big thank you to Brian and editors Sadie Witkowski and Sara Stoudt for allowing us to repost it. Sadie and Sara have been fantastically supportive of the DataScienceBites idea, and I am grateful for all their behind-the-scenes efforts. 
 
-Brian’s post is a great demonstration of the Bites concept, and we hope that it will inspire others to follow suit. If you are a graduate student or early career researcher in data science (or related subjects) with a passion for science communication and an interest in writing about new data science research, please do [get in touch](/contact.qmd). See our [notes for contributors]() for further details.  
+Brian’s post is a great demonstration of the Bites concept, and we hope that it will inspire others to follow suit. If you are a graduate student or early career researcher in data science (or related subjects) with a passion for science communication and an interest in writing about new data science research, please do [get in touch](/contact.qmd). See our [notes for contributors](/contributor-docs/datasciencebites.qmd) for further details.  
 
 To everyone else, we do hope you enjoy sinking your teeth into the data science literature with [DataScienceBites](/news-and-views/datasciencebites/index.qmd). Happy reading!
 
