--- a/news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.qmd
+++ b/news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.qmd
@@ -9,8 +9,8 @@ categories:
 author: Brian Tarran
 date: 12/13/2022
 toc: true
-# image: images/kelly-sikkema-vSNy_bWa5AE-unsplash-crop.jpg
-# image-alt: A photo of a black stencilled number 4 on a white brick wall. Photo by Kelly Sikkema on Unsplash.
+image: images/datasciencebites-logo.png
+image-alt: DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites.   
 ---
 I’m absolutely thrilled today to announce the launch of our new blog, [DataScienceBites](/news-and-views/datasciencebites/index.qmd). The blog is not only a new addition to Real World Data Science, but also the latest proud member of the ScienceBites family of sites. 
 
@@ -23,6 +23,8 @@ This launch post is written by Brian King and is republished with permission fro
 Brian’s post is a great demonstration of the Bites concept, and we hope that it will inspire others to follow suit. If you are a graduate student or early career researcher in data science (or related subjects) with a passion for science communication and an interest in writing about new data science research, please do [get in touch](/contact.qmd). See our [notes for contributors](/contributor-docs/datasciencebites.qmd) for further details.  
 
 To everyone else, we do hope you enjoy sinking your teeth into the data science literature with [DataScienceBites](/news-and-views/datasciencebites/index.qmd). Happy reading!
+
+![](images/datasciencebites-logo.png){fig-alt="DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites." width="500" fig-align="center"}
 
 ###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
 
