--- a/news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.qmd
+++ b/news-and-views/editors-blog/posts/2022-12-13-dsb-launch/dsb-launch.qmd
@@ -16,9 +16,9 @@ I’m absolutely thrilled today to announce the launch of our new blog, [DataSci
 
 [ScienceBites sites](https://sciencebites.org/sciencebites-sites-galaxy/) all share the same [concept](https://sciencebites.org/about/): we publish “short digestible *bites posts* about individual research papers” in an effort to make cutting-edge science accessible to a wide audience, and our posts are written by graduate students and early career researchers. 
 
-For [DataScienceBites](/news-and-views/datasciencebites/index.qmd), our focus will of course be on new publications in the data science space. Contributors are invited to write about papers that are of particular interest to them and to pitch their summaries at an undergraduate level. For an example of what we're looking for, see our first post on [“Determining the best way to route drivers for ridesharing via reinforcement learning”](/news-and-views/datasciencebites/posts/2022-09-12-ridesharing/ridesharing.qmd).  
+For [DataScienceBites](/news-and-views/datasciencebites/index.qmd), our focus will of course be on new publications in the data science space. Contributors are invited to write about papers that are of particular interest to them and to pitch their summaries at an undergraduate level. For an example of what we're looking for, see our first post on [“Determining the best way to route drivers for ridesharing via reinforcement learning”](/news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.qmd).  
 
-This launch post is written by Brian King and is republished with permission from [MathStatBites](https://mathstatbites.org/determining-the-best-way-to-route-drivers-for-ridesharing-via-reinforcement-learning/), so I want to say a big thank you to Brian and editors Sadie Witkowski and Sara Stoudt for allowing us to repost it. Sadie and Sara have been fantastically supportive of the DataScienceBites idea, and I am grateful for all their behind-the-scenes efforts. 
+This launch post is written by Brian King and is republished with permission from [MathStatBites](https://mathstatbites.org), so I want to say a big thank you to Brian and editors Sadie Witkowski and Sara Stoudt for allowing us to repost it. Sadie and Sara have been fantastically supportive of the DataScienceBites idea, and I am grateful for all their behind-the-scenes efforts. 
 
 Brian’s post is a great demonstration of the Bites concept, and we hope that it will inspire others to follow suit. If you are a graduate student or early career researcher in data science (or related subjects) with a passion for science communication and an interest in writing about new data science research, please do [get in touch](/contact.qmd). See our [notes for contributors](/contributor-docs/datasciencebites.qmd) for further details.  
 
