--- a/news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.qmd
+++ b/news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.qmd
@@ -51,4 +51,6 @@ Overall, the framework introduced allows for handling of carryover effects, is c
 **Brian King** is a PhD candidate in the Department of Statistics at Rice University and a current NSF Graduate Research Fellow, with research focused on Bayesian modeling and forecasting for time series of counts. Prior to Rice, he graduated from Baylor University with a B.S. in Mathematics and Statistics alongside a secondary major in Spanish and a minor in Computer Science.
 
 ## About DataScienceBites
-[**DataScienceBites**](/news-and-views/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. DataScienceBites is published by Real World Data Science, and is part of the [Science Bites](https://sciencebites.org/) [network of sites](https://sciencebites.org/sciencebites-sites-galaxy/). Find out how to [become a contributor](/contributor-docs/call-for-contributions.qmd).
+[**DataScienceBites**](/news-and-views/datasciencebites/index.qmd) is written by graduate students and early career researchers in data science (and related subjects) at universities throughout the world, as well as industry researchers. We publish digestible, engaging summaries of interesting new pre-print and peer-reviewed publications in the data science space, with the goal of making scientific papers more accessible. Find out how to [become a contributor](/contributor-docs/datasciencebites.qmd).
+
+[![](/news-and-views/datasciencebites/datasciencebites-logo.png){fig-alt="DataScienceBites logo. A dark grey circle with bite marks cut out. Overlaid text says, Import grad_students as writers, import new_research_papers as nrp, print(writers + nrp) and the title DataScienceBites." width="200" fig-align="center"}](/news-and-views/datasciencebites/index.qmd)
