fixed quote styles

--- a/news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.qmd
+++ b/news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.qmd
@@ -21,7 +21,7 @@ toc: true
 
 **Status:** Published in *Journal of the American Statistical Association, Theory and Methods*, open access: [HTML](https://www.tandfonline.com/doi/full/10.1080/01621459.2022.2027776), [PDF](https://www.tandfonline.com/doi/epdf/10.1080/01621459.2022.2027776?needAccess=true&role=button), [EPUB](https://www.tandfonline.com/doi/epub/10.1080/01621459.2022.2027776?needAccess=true&role=button). 
 
-**Editor's note:** This post is republished with permission from [MathStatBites](https://mathstatbites.org/determining-the-best-way-to-route-drivers-for-ridesharing-via-reinforcement-learning/) to demonstrate the Bites concept. See [here](ridesharing.qmd#about-datasciencebites) for more information.
+**Editor's note:** This post is republished with permission from [MathStatBites](https://mathstatbites.org/determining-the-best-way-to-route-drivers-for-ridesharing-via-reinforcement-learning/) to demonstrate the Bites concept. See [here](/contributor-docs/datasciencebites.qmd) for more information.
 :::
 
 Companies often want to test the impact of one design decision over another, for example Google might want to compare the current ranking of search results (version A) with an alternative ranking (version B) and evaluate how the modification would affect users’ decisions and click behavior. An experiment to determine this impact on users is known as an A/B test, and many methods have been designed to measure the "treatment" effect of the proposed change.  However, these classical methods typically assume that changing one person’s treatment will not affect others (known as the Stable Unit Treatment Value Assumption or SUTVA). In the Google example, this is typically a valid assumption — showing one user different search results shouldn’t impact another user’s click behavior. But in some situations, SUTVA is violated, and new methods must be introduced to properly measure the effect of design changes. 
@@ -41,7 +41,7 @@ Making this more concrete, consider an example where the decision-maker is a rid
 
 So how are policies compared to determine the treatment effect? The answer lies in what is known as the value function, which measures the total outcome that would have amassed had the decision-maker followed a given policy. The value function can put more value on short-term gain in outcome or long-term benefits. The two policies in an A/B test each have their own value functions, and a proposed policy is determined to be better if its value is (statistically) significantly higher. In the ridesharing setting, one possible outcome of interest is driver income. An A/B test in that scenario would thus look to see if a proposed policy had greater expected driver income vs the current policy.
 
-A natural question is when to end the experiment and test for a difference in value. In practice, companies will often simply run the test for a prespecified amount of time, such as two weeks, and then perform an analysis. But if one policy is clearly better than another, that difference could be detectable much earlier and the company is wasting valuable resources by continuing the experiment. To address this issue, the authors take an idea from clinical trials, the ‘alpha-spending’ approach, and adapt it to their framework. Alpha-spending is one way to distribute over time the prespecified ‘budget’ of Type 1 error (the probability of falsely detecting that a new policy is better). In the article’s real-data example, the authors test once a day for each day after one week and are able to detect a significant difference on Day 12. Waiting until Day 14 would have resulted in poorer outcomes since a suboptimal policy would be implemented half the time for two more days.
+A natural question is when to end the experiment and test for a difference in value. In practice, companies will often simply run the test for a prespecified amount of time, such as two weeks, and then perform an analysis. But if one policy is clearly better than another, that difference could be detectable much earlier and the company is wasting valuable resources by continuing the experiment. To address this issue, the authors take an idea from clinical trials, the "alpha-spending" approach, and adapt it to their framework. Alpha-spending is one way to distribute over time the prespecified "budget" of Type 1 error (the probability of falsely detecting that a new policy is better). In the article’s real-data example, the authors test once a day for each day after one week and are able to detect a significant difference on Day 12. Waiting until Day 14 would have resulted in poorer outcomes since a suboptimal policy would be implemented half the time for two more days.
 
 Overall, the framework introduced allows for handling of carryover effects, is capable of modeling treatment allocation like the switchback design, and furthermore, allows for possible early stopping. With these three features, the authors argue their approach is highly applicable to the current practice of ridesharing companies (and possibly other industries as well). For interested readers wanting to dive deeper into the methodology presented, you can check out the [full article](https://www.tandfonline.com/doi/full/10.1080/01621459.2022.2027776), listen to the first author discuss the material at the [Online Causal Inference Seminar](https://www.youtube.com/watch?v=Zor1CmRyycw) (embedded below), or explore the [Python implementation](https://github.com/callmespring/CausalRL) available on GitHub.
 
