add title to filter

--- a/news-and-views/newsletter/index.qmd
+++ b/news-and-views/newsletter/index.qmd
@@ -6,7 +6,7 @@ description: |
 listing:
   template: rssdsai-newsletter.ejs
   contents: rssdsai-newsletter.yml
-  fields: [date]
+  fields: [date, title]
   sort-ui: true
   filter-ui: true
   page-size: 12
