remove filter ui and title from sort option

--- a/news-and-views/newsletter/index.qmd
+++ b/news-and-views/newsletter/index.qmd
@@ -6,9 +6,9 @@ description: |
 listing:
   template: rssdsai-newsletter.ejs
   contents: rssdsai-newsletter.yml
-  fields: [date, title]
+  fields: [date]
   sort-ui: true
-  filter-ui: true
+  filter-ui: false
   page-size: 12
 toc: false
 sidebar: false
