--- a/news-and-views/editors-blog/posts/2023/01/05/newsletter.qmd
+++ b/news-and-views/editors-blog/posts/2023/01/05/newsletter.qmd
@@ -15,7 +15,7 @@ Happy New Year from all of us at Real World Data Science. We hope you had a rela
 
 This monthly newsletter has been running since February 2020 and is well worth subscribing to as it features roundups of news, new developments, big picture ideas and practical tips.  
 
-You’ll find the full list of past newsletters in our [**News and views**](https://realworlddatascience.net/news-and-views/) section. If you want to subscribe to the newsletter, head over to [datasciencesection.org](https://datasciencesection.org/). The Data Science & AI Section also has a page on the [RSS website](https://rss.org.uk/membership/rss-groups-and-committees/sections/data-science-section/). 
+You’ll find the full list of past newsletters in our [**News and views**](https://realworlddatascience.net/news-and-views/) section (click the "Newsletter" heading in the section menu). If you want to subscribe to the newsletter, head over to [datasciencesection.org](https://datasciencesection.org/). The Data Science & AI Section also has a page on the [RSS website](https://rss.org.uk/membership/rss-groups-and-committees/sections/data-science-section/). 
 
 ###### **&larr; Back to [Editors' blog](/news-and-views/editors-blog/index.qmd)**
 
