updated Quarto company name and links

--- a/contributor-docs/contributor-guidelines.qmd
+++ b/contributor-docs/contributor-guidelines.qmd
@@ -4,7 +4,7 @@ title: "Contributor guidelines"
 Thank you for your interest in contributing to Real World Data Science. This page will walk you through the process of preparing and submitting your idea. If you haven't done so already, please review our [call for contributions](call-for-contributions.qmd) before continuing.
 
 ## Site functionality and ethos
-Real World Data Science is built on [Quarto](https://quarto.org/), the new open-source publishing system developed by [RStudio](https://www.rstudio.com/). The site has been designed from the ground up as a platform for data scientists, created by data scientists. Here’s what this means in practice:  
+Real World Data Science is built on [Quarto](https://quarto.org/), the new open-source publishing system developed by [Posit](https://posit.co/). The site has been designed from the ground up as a platform for data scientists, created by data scientists. Here’s what this means in practice:  
 
 * **Contributors can use data science software and tools to create content** – e.g. Visual Studio Code, RStudio, Jupyter Lab; Python, R, Observable, and Shiny – allowing for the full integration of text, code, figures, equations, and other elements. 
 
