--- a/contributor-docs/call-for-contributions.qmd
+++ b/contributor-docs/call-for-contributions.qmd
@@ -23,7 +23,7 @@ Submissions can focus on any and all topics and application areas. We want our c
 Real World Data Science is for all who work in data science - whether they are students, teachers, practitioners or leaders. Submissions do not have to appeal to *all* data scientists, however. Contributors should think carefully about who they are trying to reach, and craft their submissions accordingly.
 
 ## What can submissions include?
-We encourage contributors to experiment with and include different media formats in their submissions - text, images, audio and video. And as our site is built on [Quarto](https://quarto.org/) - the new open-source publishing system developed by [RStudio](https://www.rstudio.com/) - submissions to Real World Data Science can also include code cells, equations, figures, interactive data displays, and other elements to enrich the user experience. If you haven't used Quarto before, check out this fantastic [tutorial](https://quarto.org/docs/get-started/) from the developers.
+We encourage contributors to experiment with and include different media formats in their submissions - text, images, audio and video. And as our site is built on [Quarto](https://quarto.org/) - the new open-source publishing system developed by [Posit](https://posit.co/) - submissions to Real World Data Science can also include code cells, equations, figures, interactive data displays, and other elements to enrich the user experience. If you haven't used Quarto before, check out this fantastic [tutorial](https://quarto.org/docs/get-started/) from the developers.
 
 ## How to submit
 Once you've reviewed our notes for contributors and settled on a content area, theme and audience, please review our [contributor guidelines](contributor-guidelines.qmd) for details on the submission process.
