build interview section

--- a/index.qmd
+++ b/index.qmd
@@ -6,6 +6,7 @@ listing:
     contents: 
     - /news-and-views/editors-blog
     - /news-and-views/datasciencebites
+    - /news-and-views/interviews
     - "!index.qmd"
     sort: "date desc"
     type: default
