--- a/news-and-views/index.qmd
+++ b/news-and-views/index.qmd
@@ -5,6 +5,7 @@ listing:
   contents: 
   - editors-blog
   - datasciencebites
+  - interviews
   - "!index.qmd"
   sort: "date desc"
   type: default
